tests/NormalTests/paczka1/small_fuzzy/57580617.err
Error in line 1: YP8WJ A769 4,2
Error in line 3: 4SpfdqykDE S861 30,2
Error in line 2: YP8WJ A622 48,4
